<resources>
    <string name="app_name">NMCT</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="DialNumber">Dial number</string>
    <string name="MakeCall">Make call</string>
    <string name="Webbrowser">Webbrowser nmct.be</string>
    <string name="GeoLoc">Geolocation</string>
    <string name="Contacts">Contacts</string>
    <string name="EditContact">Edit first contact</string>
    <string name="CalcBMI">Calculate BMI</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="Location">Locatie</string>
    <string name="btnToonLocatie">Toon locatie</string>
    <string name="ToonLocatie">ToonLocatie</string>
</resources>
